// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Billing Summary render cancellation link when brightback disabled or does not load 1`] = `
Array [
  <Panel.Section
    actions={
      Array [
        Object {
          "Component": [Function],
          "color": "orange",
          "content": "Upgrade Now",
          "to": "/account/billing/plan",
        },
        Object {
          "color": "orange",
          "component": undefined,
          "content": "Cancel Plan",
          "disabled": false,
          "to": "http://brightback.url/to-cancel",
        },
      ]
    }
  >
    <LabelledValue
      label="Your Plan"
    >
      <PlanSummary
        plan={
          Object {
            "plan_volume": 15000,
          }
        }
      />
    </LabelledValue>
  </Panel.Section>,
  <Panel.Section
    actions={
      Array [
        Object {
          "color": "orange",
          "content": "Update Payment Information",
          "onClick": [Function],
        },
      ]
    }
  >
    <CardSummary
      billing={Object {}}
      label="Credit Card"
    />
  </Panel.Section>,
  <Panel.Section
    actions={
      Array [
        Object {
          "color": "orange",
          "content": "Update Billing Contact",
          "onClick": [Function],
        },
      ]
    }
  >
    <LabelledValue
      label="Billing Contact"
    >
      <h6>
         
      </h6>
      <p />
    </LabelledValue>
  </Panel.Section>,
]
`;

exports[`Component: Billing Summary render disabled renew when attempting to renew account 1`] = `
Array [
  <Panel.Section
    actions={
      Array [
        Object {
          "color": "orange",
          "content": "Renew Plan",
          "disabled": true,
          "onClick": undefined,
        },
      ]
    }
  >
    <LabelledValue
      label="Your Plan"
    >
      <PlanSummary
        pendingCancellation={Object {}}
        plan={
          Object {
            "plan_volume": 15000,
          }
        }
      />
    </LabelledValue>
  </Panel.Section>,
  <Panel.Section
    actions={
      Array [
        Object {
          "color": "orange",
          "content": "Update Payment Information",
          "onClick": [Function],
        },
      ]
    }
  >
    <CardSummary
      billing={Object {}}
      label="Credit Card"
    />
  </Panel.Section>,
  <Panel.Section
    actions={
      Array [
        Object {
          "color": "orange",
          "content": "Update Billing Contact",
          "onClick": [Function],
        },
      ]
    }
  >
    <LabelledValue
      label="Billing Contact"
    >
      <h6>
         
      </h6>
      <p />
    </LabelledValue>
  </Panel.Section>,
]
`;

exports[`Component: Billing Summary render renew when there is pending cancellation 1`] = `
Array [
  <Panel.Section
    actions={
      Array [
        Object {
          "color": "orange",
          "content": "Renew Plan",
          "disabled": false,
          "onClick": undefined,
        },
      ]
    }
  >
    <LabelledValue
      label="Your Plan"
    >
      <PlanSummary
        pendingCancellation={Object {}}
        plan={
          Object {
            "plan_volume": 15000,
          }
        }
      />
    </LabelledValue>
  </Panel.Section>,
  <Panel.Section
    actions={
      Array [
        Object {
          "color": "orange",
          "content": "Update Payment Information",
          "onClick": [Function],
        },
      ]
    }
  >
    <CardSummary
      billing={Object {}}
      label="Credit Card"
    />
  </Panel.Section>,
  <Panel.Section
    actions={
      Array [
        Object {
          "color": "orange",
          "content": "Update Billing Contact",
          "onClick": [Function],
        },
      ]
    }
  >
    <LabelledValue
      label="Billing Contact"
    >
      <h6>
         
      </h6>
      <p />
    </LabelledValue>
  </Panel.Section>,
]
`;

exports[`Component: Billing Summary should render correctly for a paid plan 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Change Plan",
            "to": "/account/billing/plan",
          },
          Object {
            "color": "orange",
            "component": undefined,
            "content": "Cancel Plan",
            "disabled": false,
            "to": "http://brightback.url/to-cancel",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": false,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly for a standard free plan 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
          Object {
            "color": "orange",
            "component": undefined,
            "content": "Cancel Plan",
            "disabled": false,
            "to": "http://brightback.url/to-cancel",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly if you can't buy IPs 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
          Object {
            "color": "orange",
            "component": undefined,
            "content": "Cancel Plan",
            "disabled": false,
            "to": "http://brightback.url/to-cancel",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly if you can't change your plan 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "component": undefined,
            "content": "Cancel Plan",
            "disabled": false,
            "to": "http://brightback.url/to-cancel",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly if you can't update your billing info 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
          Object {
            "color": "orange",
            "component": undefined,
            "content": "Cancel Plan",
            "disabled": false,
            "to": "http://brightback.url/to-cancel",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component: Billing Summary should render with IP modal open 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
          Object {
            "color": "orange",
            "component": undefined,
            "content": "Cancel Plan",
            "disabled": false,
            "to": "http://brightback.url/to-cancel",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={true}
  >
    <AddIpsForm
      onClose={[Function]}
    />
  </Modal>
</div>
`;

exports[`Component: Billing Summary should render with the billing contact modal open 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
          Object {
            "color": "orange",
            "component": undefined,
            "content": "Cancel Plan",
            "disabled": false,
            "to": "http://brightback.url/to-cancel",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={true}
  >
    <UpdateContactForm
      onCancel={[Function]}
    />
  </Modal>
</div>
`;

exports[`Component: Billing Summary should render with the payment info modal open 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
          Object {
            "color": "orange",
            "component": undefined,
            "content": "Cancel Plan",
            "disabled": false,
            "to": "http://brightback.url/to-cancel",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={true}
  >
    <UpdatePaymentForm
      onCancel={[Function]}
    />
  </Modal>
</div>
`;

exports[`Component: Billing Summary should show the invoice history if there are invoices 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
          Object {
            "color": "orange",
            "component": undefined,
            "content": "Cancel Plan",
            "disabled": false,
            "to": "http://brightback.url/to-cancel",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <Connect(InvoiceHistory)
    invoices={
      Array [
        "an invoice",
        "another invoice",
      ]
    }
  />
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal
    onClose={[Function]}
    open={false}
  />
</div>
`;
